[package]
name = "minio-restream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.39.3", features=["full"] }
tokio-stream = "0.1.15"
prost = "0.13.1"
anyhow = "1.0.86"
minior = "0.1.14"
tonic = "0.12.1"
env_logger = "0.11.5"
log = "0.4.22"
bytes = "1.7.1"
tokio-util = { version = "0.7.11", features = ["default", "io"] }
pin-project = "1.1.5"
async-stream = "0.3.5"

[build-dependencies]
tonic-build = "0.12.1"
